--- a/dev/scss/sections/_slider-main.scss
+++ b/dev/scss/sections/_slider-main.scss
@@ -13,20 +13,34 @@
   }
 
   .slider-counter__link {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 28px;
-    text-decoration: underline;
+    text-decoration: none;
+    padding: 1rem;
+    text-align: start;
+    text-decoration: none;
+    border-bottom: 2px solid $gray-800;
+    opacity: .3;
+    display: inline-block;
+    line-height: 0.5;
+    width: 178px;
+    margin: 0 4px;
   }
 
   .slider-counter__link--numbers {
     color: $gray-800;
-    opacity: 0.6;
+
+    &:hover {
+      transform: scale(1);
+    }
   }
 
   .slider-counter__link--active.slider-counter__link--numbers {
     opacity: 1;
+    text-decoration: none;
+    transform: scale(1);
   }
 
   .banner {
@@ -38,35 +52,40 @@
   }
 
   .slider-button {
-    top: 50%;
-    position: absolute;
-    display: block;
-    width: 48px;
-    height: 48px;
-    transform: translateY(-50%);
-    z-index: 5;
-    transition: all .3s;
+    display: none;
+
+    @media screen and (min-width: 750px) {
+      top: 50%;
+      position: absolute;
+      display: block;
+      width: 48px;
+      height: 48px;
+      transform: translateY(-50%);
+      z-index: 5;
+      transition: all .3s;
+      background: $white;
+      opacity: .5;
+      border-radius: 50px;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   .slider-button--prev {
-    left: 32px;
-    background: #FFFFFF;
-    opacity: 0.5;
-    border-radius: 50px;
+    left: 15px;
 
-    &:hover {
-      opacity: 1;
+    @media screen and (min-width: 1400px) {
+      left: 32px;
     }
   }
 
   .slider-button--next {
-    right: 32px;
-    background: #FFFFFF;
-    opacity: 0.5;
-    border-radius: 50px;
+    right: 15px;
 
-    &:hover {
-      opacity: 1;
+    @media screen and (min-width: 1400px) {
+      right: 32px;
     }
   }
 
@@ -75,11 +94,16 @@
   }
 
   .slider-counter {
-    position: absolute;
-    bottom: 180px;
-    z-index: 5;
-    width: 50%;
-    left: 16%;
+    display: none;
+
+    @media screen and (min-width: 750px) {
+      display: block;
+      position: absolute;
+      bottom: 180px;
+      z-index: 5;
+      width: 50%;
+      left: 16%;
+    }
   }
 
   .slider-button--next {
