[feature/slider main] change style text, button, sort selectors

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -586,20 +586,19 @@ li.menu-item-has-children:hover {
   width: 100%;
 }
 .slideshow-section .slider-counter__link {
+  border-bottom: 2px solid #424551;
+  display: inline-block;
   font-family: "Ubuntu", sans-serif;
+  font-size: 28px;
   font-style: normal;
   font-weight: 700;
-  font-size: 28px;
-  text-decoration: none;
+  line-height: 0.5;
+  margin: 0 4px;
+  opacity: 0.3;
   padding: 1rem;
   text-align: start;
   text-decoration: none;
-  border-bottom: 2px solid #424551;
-  opacity: 0.3;
-  display: inline-block;
-  line-height: 0.5;
   width: 178px;
-  margin: 0 4px;
 }
 .slideshow-section .slider-counter__link--numbers {
   color: #424551;
@@ -623,17 +622,17 @@ li.menu-item-has-children:hover {
 }
 @media screen and (min-width: 750px) {
   .slideshow-section .slider-button {
-    top: 50%;
-    position: absolute;
-    display: block;
-    width: 48px;
-    height: 48px;
-    transform: translateY(-50%);
-    z-index: 5;
-    transition: all 0.3s;
     background: #fff;
-    opacity: 0.5;
     border-radius: 50px;
+    display: block;
+    height: 48px;
+    opacity: 0.5;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: all 0.3s;
+    width: 48px;
+    z-index: 5;
   }
   .slideshow-section .slider-button:hover {
     opacity: 1;
@@ -649,6 +648,7 @@ li.menu-item-has-children:hover {
 }
 .slideshow-section .slider-button--next {
   right: 15px;
+  transform: rotate(180deg) translateY(24px);
 }
 @media screen and (min-width: 1400px) {
   .slideshow-section .slider-button--next {
@@ -658,30 +658,34 @@ li.menu-item-has-children:hover {
 .slideshow-section .slideshow__text-wrapper {
   position: relative;
 }
+.slideshow-section .slideshow__text-wrapper .banner__text {
+  color: #1e212c;
+  font-size: 72px;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
 .slideshow-section .slider-counter {
   display: none;
 }
 @media screen and (min-width: 750px) {
   .slideshow-section .slider-counter {
-    display: block;
-    position: absolute;
     bottom: 180px;
-    z-index: 5;
-    width: 50%;
+    display: block;
     left: 16%;
+    position: absolute;
+    width: 50%;
+    z-index: 5;
   }
-}
-.slideshow-section .slider-button--next {
-  transform: rotate(180deg);
 }
 @media screen and (min-width: 750px) {
   .slideshow-section .banner--desktop-transparent .banner__box {
     --color-button: 23, 105, 106;
-    --color-button-text: 0, 0, 0;
+    --color-button-text: 255, 255, 255;
+    --color-foreground: 30, 33, 44;
   }
   .slideshow-section .banner--desktop-transparent .button--secondary {
+    --color-button-text: 23, 105, 106;
     border: 1px solid #17696a;
-    --color-button-text: 0, 0, 0;
   }
 }
 
