[feature/collection category] add position top, style link,  delete arrow

--- a/sections/collection-category.liquid
+++ b/sections/collection-category.liquid
@@ -81,7 +81,7 @@
 {
   "name": "collection-category",
   "tag": "section",
-  "class": "section section-collection-list",
+  "class": "section section-collection-category",
   "max_blocks": 15,
   "settings": [
     {
