--- a/assets/styles.css
+++ b/assets/styles.css
@@ -632,7 +632,6 @@ li.menu-item-has-children:hover {
     transform: translateY(-50%);
     transition: all 0.3s;
     width: 48px;
-    z-index: 5;
   }
   .slideshow-section .slider-button:hover {
     opacity: 1;
@@ -674,7 +673,6 @@ li.menu-item-has-children:hover {
     left: 16%;
     position: absolute;
     width: 50%;
-    z-index: 5;
   }
 }
 @media screen and (min-width: 750px) {
@@ -686,6 +684,19 @@ li.menu-item-has-children:hover {
   .slideshow-section .banner--desktop-transparent .button--secondary {
     --color-button-text: 23, 105, 106;
     border: 1px solid #17696a;
+  }
+}
+
+.section-collection-category .full-unstyled-link {
+  font-weight: 700;
+  font-size: 20px;
+  color: #424551;
+  text-transform: capitalize;
+  text-align: center;
+}
+@media screen and (min-width: 990px) {
+  .section-collection-category .slider-mobile-gutter {
+    top: -120px;
   }
 }
 
