--- a/dev/scss/theme.scss
+++ b/dev/scss/theme.scss
@@ -32,6 +32,7 @@
 @import 'sections/header';
 @import 'sections/announcement-bar';
 @import 'sections/slider-main';
+@import 'sections/collection-category';
 @import 'sections/footer';
 
 // --------------------------------------------------
