--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -89,7 +89,7 @@
               {%- else -%}
                 {{ 'onboarding.collection_title' | t }}
               {%- endif -%}
-              {%- if card_collection.featured_image or card_collection.description == blank -%}<span class="icon-wrap">{% render 'icon-arrow' %}</span>{% endif %}
+              {%- if card_collection.featured_image or card_collection.description == blank -%}<span class="icon-wrap"></span>{% endif %}
             </a>
           </h3>
           {%- if card_collection.featured_image == nil and card_collection.description != blank -%}
