--- a/dev/scss/sections/_slider-main.scss
+++ b/dev/scss/sections/_slider-main.scss
@@ -93,9 +93,17 @@
 
     .banner__text {
       color: $gray-900;
-      font-size: 72px;
+      font-size: 32px;
       font-weight: 900;
       letter-spacing: 1px;
+
+      @media screen and (min-width: 750px) {
+        font-size: 48px;
+      }
+
+      @media screen and (min-width: 990px) {
+        font-size: 72px;
+      }
     }
   }
 
